flux/kube-system/kube-state-metrics.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kube-system-kube-state-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: kube-system-kube-state-metrics
    app.kubernetes.io/name: kube-state-metrics
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-system-kube-state-metrics
      app.kubernetes.io/name: kube-state-metrics
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-system-kube-state-metrics
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: kube-system-kube-state-metrics
    app.kubernetes.io/name: kube-state-metrics
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kube-system-kube-state-metrics
      app.kubernetes.io/name: kube-state-metrics
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: kube-system-kube-state-metrics
        app.kubernetes.io/name: kube-state-metrics
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: kube-system-kube-state-metrics
                  app.kubernetes.io/name: kube-state-metrics
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: true
      containers:
      - args:
        - --resources=certificatesigningrequests
        - --resources=configmaps
        - --resources=cronjobs
        - --resources=daemonsets
        - --resources=deployments
        - --resources=endpoints
        - --resources=horizontalpodautoscalers
        - --resources=ingresses
        - --resources=jobs
        - --resources=leases
        - --resources=limitranges
        - --resources=mutatingwebhookconfigurations
        - --resources=namespaces
        - --resources=networkpolicies
        - --resources=nodes
        - --resources=persistentvolumeclaims
        - --resources=persistentvolumes
        - --resources=poddisruptionbudgets
        - --resources=pods
        - --resources=replicasets
        - --resources=replicationcontrollers
        - --resources=resourcequotas
        - --resources=secrets
        - --resources=services
        - --resources=statefulsets
        - --resources=storageclasses
        - --resources=volumeattachments
        - --port=8080
        - --telemetry-port=8081
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.20.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: http
          timeoutSeconds: 5
        name: kube-state-metrics
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8081
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /
            port: http
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 1001
          runAsNonRoot: true
          runAsUser: 1001
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /tmp
          name: empty-dir
          subPath: tmp-dir
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
      serviceAccount: kube-system-kube-state-metrics
      serviceAccountName: kube-system-kube-state-metrics
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: empty-dir

---

apiVersion: v1
kind: Service
metadata:
  name: kube-system-kube-state-metrics
  namespace: kube-system
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/instance: kube-system-kube-state-metrics
    app.kubernetes.io/name: kube-state-metrics
spec:
  clusterIP: 10.43.76.244
  clusterIPs:
  - 10.43.76.244
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: kube-system-kube-state-metrics
    app.kubernetes.io/name: kube-state-metrics
  sessionAffinity: None
  type: ClusterIP

---
